--- a/data/amber_protocol/5-min.in
+++ b/data/amber_protocol/5-min.in
@@ -3,6 +3,6 @@ Minimization with Cartesian restraints for the solute
  imin=1, 
  maxcyc=2000,
  ntr=1,
- restraint_wt = 0.1,                 ! Constraints of 2.5 kcal/mol
- restraintmask = '@CA,C,O,N,Na,CL & !:WAT'      ! Constraints of heavy atoms except WAT
+ restraint_wt = 0.1,                 ! Constraints of 0.1 kcal/mol
+ restraintmask = '@CA,C,O,N'         ! Constraints on backbone
  &end
