--- a/data/amber_protocol/8-prod.in
+++ b/data/amber_protocol/8-prod.in
@@ -1,11 +1,11 @@
-5 ns production
+40 ns production
  &cntrl
   imin=0,                  ! Run MD without minimization
   irest=1,                 ! New MD, no restart
   ntx=5,                   ! Read coordinates and velocities
   t=0                      ! Time at the start
   iwrap=1,                 ! Wrap water
-  nstlim=2500000,          ! Number of MD steps
+  nstlim=20000000,         ! Number of MD steps
   dt=0.002,                ! Time step in ps
   ntc=2,                   ! SHAKE
   jfastw=0,                ! SHAKE for water
@@ -20,8 +20,8 @@
   tautp=1,                 ! Time constant heating in ps
   ig=-1,                   ! Random seed for velocity
   ntr=1,                   ! Restraints
-  restraint_wt = 0.1,                 ! Constraints of 2.5 kcal/mol
-  restraintmask = '@CA,C,O,N,Na,CL & !:WAT'      ! Constraints of heavy atoms except WAT
-  ntpr=250,               ! Energy information every 0.2 ps 
-  ntwx=250                ! Coordinates written every 0.2 ps 
+  restraint_wt = 0.1,                 ! Constraints of 0.1 kcal/mol
+  restraintmask = '@CA,C,O,N'         ! Constraints on backbone
+  ntpr=500,               ! Energy information every 1 ps 
+  ntwx=500                ! Coordinates written every 1 ps 
  &end
