--- a/data/amber_protocol/3_wb-min.in
+++ b/data/amber_protocol/3_wb-min.in
@@ -4,5 +4,5 @@ Minimization with Cartesian restraints for the solute
  maxcyc=250,
  ntr=1,
  restraint_wt = 100.0,                 ! Constraints of 2.5 kcal/mol
- restraintmask = '!@H= & !:WAT'      ! Constraints of heavy atoms except WAT
+ restraintmask = ':1-XXX&!@H='          ! Constraints of heavy atoms except WAT
  &end
