Working example in pipeline.py after migration. Still have to work out the concentrations part, by now cosolvents can only be added by number of copies (let the user do the math)

--- a/.gitignore
+++ b/.gitignore
@@ -138,5 +138,5 @@ results/simulation.dcd
 results/simulation.nc
 results/system.inpcrd
 results/system.prmtop
-test_openff.ipynb
-benzene.mol
+*.ipynb
+*.mol
