--- a/config.json
+++ b/config.json
@@ -3,7 +3,7 @@
   "forcefields": "/home/niccolo/phd/cosolvkit/forcefields.json",
   "md_format": "amber",
   "receptor": true,
-  "protein_path": "/home/niccolo/phd/cosolvkit/data/example/protein.pdb",
+  "protein_path": "/home/niccolo/phd/cosolvkit/data/lysozyme/7l37.cif",
   "clean_protein": true,
   "keep_heterogens": false,
   "variants": [],
