Added option in the config file to not run cosolvent_system but just the md simulation. This feature is for developers only and won't be released in production.

--- a/config.json
+++ b/config.json
@@ -18,5 +18,6 @@
   "waters_to_keep": [],
   "radius": null,
   "output": "/home/niccolo/Desktop/results",
+  "run_cosolvent_system": true,
   "run_md": false
 }
