--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -1,39 +1,40 @@
-# This workflow will upload a Python Package using Twine when a release is created
-# For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-python#publishing-to-package-registries
-
-# This workflow uses actions that are not certified by GitHub.
-# They are provided by a third-party and are governed by
-# separate terms of service, privacy policy, and support
-# documentation.
-
-name: Upload Python Package
+name: Build/upload sdist and wheel Package to PyPi
 
 on:
+  pull_request:
+    branches:
+      - master
   release:
-    types: [published]
-
-permissions:
-  contents: read
-
+    types:
+      - published
+      
 jobs:
-  deploy:
-
+  build:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v4
-    - name: Set up Python
-      uses: actions/setup-python@v3
-      with:
-        python-version: '3.x'
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install build
-    - name: Build package
-      run: python -m build
-    - name: Publish package
-      uses: pypa/gh-action-pypi-publish@27b31702a0e7fc50959f5ad993c78deac1bdfc29
-      with:
-        user: __token__
-        password: ${{ secrets.PYPI_API_TOKEN }}
+      - name: Checkout
+        uses: actions/checkout@v2
+      - name: Set up Python
+        uses: actions/setup-python@v2
+        with:
+          python-version: '3,x'
+          architecture: 'x64'
+      - name: Install dependencies
+        run: |
+          python -m install --upgrade pip setuptools wheel twine flake8
+      - name: Create sdist and wheel
+        run: |
+          python setup.py sdist bdist_wheel
+      - name: Upload artifacts for inspection
+        uses: actions/upload-artifact@v2
+        with:
+          name: dist
+          path: dist/*
+      - name: Publish sdist and wheel to PyPi
+        if: github.event_name == 'release' && github.event.action == 'published'
+        env:
+          TWINE_USERNAME: __token__
+          TWINE_PASSWORD: ${{ secrets.PYPI_FORLILAB }}
+        run: |
+          twine upload dist/*
