--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -35,6 +35,6 @@ jobs:
         if: github.event_name == 'release' && github.event.action == 'published'
         env:
           TWINE_USERNAME: __token__
-          TWINE_PASSWORD: ${{ secrets.PYPI_FORLILAB }}
+          TWINE_PASSWORD: ${{ secrets.PYPI_COSOLVKIT }}
         run: |
           twine upload dist/*
