--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -17,7 +17,7 @@ formats: all
 build:
   os: ubuntu-22.04
   tools:
-    python: "3.12"
+    python: 3.12
 
 conda:
   environment: build/python/environment.yml
