--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -25,3 +25,9 @@ sphinx:
 
 conda:
   environment: docs/source/environment.yml
+
+python:
+  install:
+  - requirements: docs/requirements.txt
+  - method: pip
+    path: .
