--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -17,7 +17,7 @@ formats: all
 build:
   os: ubuntu-22.04
   tools:
-    python: "3.10"
+    python: "miniconda3-4.7"
 
 # Build documentation in the "docs/" directory with Sphinx
 sphinx:
