--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -20,7 +20,7 @@ sphinx:
   configuration: docs/source/conf.py
 
 conda:
-  environment: docs/source/environment.yml
+  environment: cosolvkit_env.yml
 
 # Optionally build your docs in additional formats such as PDF and ePub
 # formats:
