--- a/cosolvkit_env.yml
+++ b/cosolvkit_env.yml
@@ -1,4 +1,4 @@
-name: cosolvkit_clean
+name: cosolvkit
 channels:
   - conda-forge
 dependencies:
@@ -382,6 +382,8 @@ dependencies:
   - snappy=1.1.10=hdb0a2a9_1
   - sniffio=1.3.1=pyhd8ed1ab_0
   - soupsieve=2.5=pyhd8ed1ab_1
+  - sphinx
+  - sphinx_rtd_theme
   - sqlalchemy=2.0.29=py310h2372a71_0
   - stack_data=0.6.2=pyhd8ed1ab_0
   - statsmodels=0.14.1=py310h1f7b6fc_0
@@ -458,4 +460,3 @@ dependencies:
       - pdb4amber==22.0
       - pytraj==2.0.6
       - sander==22.0
-prefix: /home/nick/miniconda3/envs/cosolvkit_clean
