--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -9,7 +9,7 @@ version: 2
 build:
   os: ubuntu-22.04
   tools:
-    python: "miniconda3-4.7"
+    python: "mambaforge-latest"
     # You can also specify other tool versions:
     # nodejs: "19"
     # rust: "1.64"
@@ -20,7 +20,7 @@ sphinx:
   configuration: docs/source/conf.py
 
 conda:
-  environment: docs/source/environment.yml
+  environment: cosolvkit_env.yml
 
 # Optionally build your docs in additional formats such as PDF and ePub
 # formats:
